BUGFIX: cms ui fix specifivity of alignment of radio buttons and labels in right pane
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/branches/2.3@70495 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/cms_right.css
+++ b/css/cms_right.css
@@ -143,6 +143,9 @@
 .right form input.action {
 	width: auto;
 	margin-right: 4px;
+}
+
+.right form #Root_Access input {
 	float: left;
 }
 
